infra/k8s/event-bus-depl.yaml
# deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # number of pods we want to create
  replicas: 1
  # find all pods that have label app event-bus
  selector:
    matchLabels:
      # app doesn't have any special meaning it could be any word
      app: event-bus
  # apply this config to the pods
  template:
    metadata:
      # we want pods to have label app: event-bus
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: ivanmitkov/event-bus:latest
# after change config kubectl apply -f [config file name]
