infra/k8s/posts-depl.yaml
# deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  # number of pods we want to create
  replicas: 1
  # find all pods that have label app posts
  selector:
    matchLabels:
      # app doesn't have any special meaning it could be any word
      app: posts
  # apply this config to the pods
  template:
    metadata:
      # we want pods to have label app: posts
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: ivanmitkov/posts:latest
# after change config kubectl apply -f [config file name]
