infra/k8s/client-depl.yaml
# deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # number of pods we want to create
  replicas: 1
  # find all pods that have label app client
  selector:
    matchLabels:
      # app doesn't have any special meaning it could be any word
      app: client
  # apply this config to the pods
  template:
    metadata:
      # we want pods to have label app: client
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ivanmitkov/client:latest
# after change config kubectl apply -f [config file name]
#create multiple objects in one file
---
#configuration for Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  #optional default is ClusterIP
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
