infra/k8s/comments-depl.yaml
# deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # number of pods we want to create
  replicas: 1
  # find all pods that have label app comments
  selector:
    matchLabels:
      # app doesn't have any special meaning it could be any word
      app: comments
  # apply this config to the pods
  template:
    metadata:
      # we want pods to have label app: comments
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: ivanmitkov/comments:latest
# after change config kubectl apply -f [config file name]
#create multiple objects in one file
---
#configuration for Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  #optional default is ClusterIP
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
