infra/k8s/query-depl.yaml
# deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # number of pods we want to create
  replicas: 1
  # find all pods that have label app query
  selector:
    matchLabels:
      # app doesn't have any special meaning it could be any word
      app: query
  # apply this config to the pods
  template:
    metadata:
      # we want pods to have label app: query
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: ivanmitkov/query:latest
# after change config kubectl apply -f [config file name]
#create multiple objects in one file
---
#configuration for Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  #optional default is ClusterIP
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
