infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # in one kubernetes cluster there are can be a lot of apps so this are rules for posts.com
    - host: posts.com
      http:
        paths:
          - path: /posts
          # from service config yaml
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
